2016-09-27  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (file_taper_result): Check result of
	  g_hash_table_lookup

2016-09-27  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/glib-util.c: Initialize shm_ring_mutex
	* common-src/shm-ring.c: Use a hash to manage semaphore
	* common-src/shm-ring.h: Export shm_ring_mutex
	* perl/Amanda/Status.pm: Fix for runq
	* server-src/tapefile.c: Fix for storage not set
	* installcheck/Amanda_Rest_Runs.pl: Fix
	* installcheck/success-dumper-chunker+taper-flush.pl Fix

2016-09-26  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/amanda/syshacks.m4: Define GETSERVBYNAME_R5 on solaris
	* common-src/security-util.c: Use solaris getservbyname_r if
	  GETSERVBYNAME_R5 is defined
	* common-src/shm-ring.c: Cast pid_t to int
	* server-src/tapefile.c: Cast pid_t to int

2016-09-21  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amadmin.c (find): Do not call find_log(), it is a cpu hog
	  and it print useless warning
	* server-src/tapefile.c (lookup_tapelabel): Use a hash

2016-09-21  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Report.pm: A Fail driver line must set the exit_status
	  to STATUS_FAILED
	* installcheck/Amanda_ClientService.pl: Fix test

2016-09-21  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_Device.pl: Fix a test

2016-09-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/planner.c (when_overwrite): Use the tapecycle
	* server-src/tapefile.c (nb_tape_in_storage): New function to compute
	  the number of tape in a storage
	* server-src/tapefile.h (nb_tape_in_storage): Add prototype
	* installcheck/success-dumper-chunker-2taper-by-level.pl: Fix test

2016-09-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/planner.c (when_overwrite): Fix off by 1 error
	* server-src/tapefile.c (tape_overwrite): Use tp1->retention

2016-09-20  Jean-Louis Martineau <JMartineau@carbonite.com>