@@ -1,3 +1,6 @@
+2016-09-28  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* installcheck/Amanda_MainLoop.pl: Increase timeout
+
 2016-09-27  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* server-src/driver.c (file_taper_result): Check result of
 	  g_hash_table_lookup
